--- a/KodiranjeSubotom/AssemblyProjekat/style.css
+++ b/KodiranjeSubotom/AssemblyProjekat/style.css
@@ -1,19 +1,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
 :root {
-    --secondary: #619cd0;
-    --text-gray: #181818;
+    --primary: #181818;
+    --secondary: #2651a8;
+    --gray: #585858;
+    --lightGray: #a2a2a2;
     --white: #fff;
     --gradient: #1d1d1d;
     --font-size: 16px;
     --fontFamily: 'Didact Gothic', sans-serif;
     --padding-X: 0 80px;
     --padding-Y: 80px 0;
+    --transition: .4s ease;
 }
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body {
     font-family: var(--fontFamily);
     font-size: var(--font-size);
+    line-height: 1.5;
+    color: var(--primary);
+}
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: var(--white);
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+.btn {
+   padding: 10px 25px;
+   font-size: 1.2rem; 
+   background-color: var(--secondary);
+   color: var(--white);
+   border: none;
+   transition: var(--transition);
+}
+.btn:hover {
+    background-color: var(--white);
+    color: var(--secondary);
+}
+.blue {
+    background-color: var(--secondary);
+    color: var(--white);
+}
+/* header */
+header {
+    background: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.4)), url(img/header.jpg);
+    background-position: center;
+    background-size: cover;
+    padding: var(--padding-Y);
+    text-align: center;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 0 0 30%;
+}
+ul li a {
+    font-size: 1.25rem;
+    padding: 15px 25px;
+    transition: var(--transition);
+}
+ul li a:hover {
+    background-color: var(--secondary);
+}
+.logo {
+    font-size: 2rem;
+}
+hgroup {
+    margin: 200px 0;
+}
+hgroup h1 {
+    font-size: 4rem;
+    color: var(--white);
+}
+hgroup p {
+    color: rgba(255,255,255,.7);
+    font-size: 2rem;
+    margin: 30px 0 50px 0;
 }
