--- a/KodiranjeSubotom/AssemblyProjekat/style.css
+++ b/KodiranjeSubotom/AssemblyProjekat/style.css
@@ -72,6 +72,7 @@ header {
 }
 nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 ul {
@@ -164,3 +165,28 @@ footer ul li a:hover {
     background-color: none;
 }
 
+/* responsive */
+@media (max-width: 768px) {
+    .container {
+        width: 90%;
+    }
+    nav .logo {
+        flex: 0 0 100%;
+        margin-bottom: 20px;
+    }
+    nav ul {
+        flex: 0 0 100%;
+    }
+    .nav ul li a {
+        padding: 10px 15px;
+    }
+    header hgroup {
+        margin: 100px 0;
+    }
+    header hgroup h1 {
+        font-size: 3rem;
+    }
+    header hgroup p {
+        font-size: 1.4rem;
+    }
+}
