--- a/FlexboxRadionica1/projektic/style.css
+++ b/FlexboxRadionica1/projektic/style.css
@@ -96,3 +96,22 @@ intro
     color: var(--blue);
     font-size: 3rem;
 }
+/***************
+blog
+***************/
+.blog {
+    padding: var(--padding);
+    background-color: var(--lightGray);
+}
+.blog .container {
+    display: flex;
+    justify-content: space-between;
+}
+.blog img {
+    width: 100%;
+    border-radius: 50px 50px 50px 0;
+    box-shadow: 4px 4px var(--blue);
+}
+.blog .col {
+    flex: 0 0 47%;
+}
