--- a/music-app/style.css
+++ b/music-app/style.css
@@ -70,11 +70,20 @@ button {
     border-radius: 40px;
     text-transform: uppercase;
     margin-top: 20px;
+    width: 240px;
 }
 button:hover {
     cursor: pointer;
     background-color: var(--violet);
     transition: var(--transition);
+}
+.container {
+    width: 80%;
+    margin: auto;
+}
+h2 {
+    font-size: 3rem;
+    line-height: 1.1;
 }
 /******************************
 header
@@ -109,4 +118,19 @@ header .col:last-child {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+/******************************
+unlimited
+******************************/
+.unlimited {
+    padding: var(--padding);
+    display: flex;
+}
+.unlimited article:first-child {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+.unlimited article:last-child {
+    flex: 1;
 }
