--- a/music-app/style.css
+++ b/music-app/style.css
@@ -192,3 +192,26 @@ artists
     width: 100%;
     border-radius: 40px;
 }
+/******************************
+artists
+******************************/
+footer {
+    background-color: var(--tamnoPlava);
+    text-align: center;
+    padding: var(--padding);
+    color: var(--bela);
+}
+footer .logo {
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+footer .logo span{
+    color: var(--pink);
+}
+footer p {
+    padding: 20px 0;
+    font-size: 0.8rem;
+}
+footer .icons i {
+    margin: 0 20px;
+}
