nav and header css

--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap");
 :root {
 	--font-family: "Roboto", sans-serif;
 	--font-size: 16px;
@@ -25,4 +25,102 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 h1, h2 {
 	text-transform: uppercase;
+}
+.container {
+	width: 80%;
+	margin: 0 auto;
+}
+.btn {
+	text-transform: uppercase;
+	padding: 10px 40px;
+	font-size: 1.2rem;
+	transition: var(--transition);
+	color: var(--white);
+	letter-spacing: 1.5px;
+	border-radius: 8px;
+}
+.blue {
+	background-color: var(--primary);
+	border: 2px solid var(--primary);
+}
+.blue:hover {
+	background-color: var(--primary-hover);
+	border-color: var(--primary-hover);
+}
+.transparent {
+	background-color: transparent;
+	border: 2px solid var(--white);
+}
+.transparent:hover {
+	background-color: rgba(255,255,255,.5);
+}
+ul {
+	list-style: none;
+}
+a {
+	text-decoration: none;
+	color: var(--secondary);
+}
+/****************
+NAVIGACIJA
+****************/
+nav {
+	background-color: var(--white);
+	padding: 10px 0;
+}
+nav .container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+nav .container ul {
+	display: flex;
+	align-items: center;
+}
+nav .container ul li {
+	margin: 0 15px;
+	padding: 8px;
+}
+nav ul li:hover {
+	background-color: var(--primary-hover);
+	border-radius: 5px;
+}
+nav ul li a {
+	letter-spacing: 1.5px;
+}
+nav ul li:hover a {
+	color: var(--white);
+}
+nav .container .logo {
+	font-size: 1.5rem;
+}
+/****************
+HEADER
+****************/
+header {
+	background-image: url(images/banner.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 70vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+header hgroup {
+	text-align: center;
+	color: var(--white);
+}
+header hgroup h1 {
+	font-size: 3rem;
+}
+header hgroup h4 {
+	margin: 30px 0;
+	font-size: 1.8rem;
+}
+header hgroup h4 span {
+	font-weight: 400;
+	text-transform: uppercase;
+}
+header hgroup button {
+	margin: 0 20px;
 }
