--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -61,6 +61,9 @@ a {
 	text-decoration: none;
 	color: var(--secondary);
 }
+section {
+	padding: 80px 0;
+}
 /****************
 NAVIGACIJA
 ****************/
@@ -123,4 +126,51 @@ header hgroup h4 span {
 }
 header hgroup button {
 	margin: 0 20px;
+}
+/****************
+ABOUT
+****************/
+.about hgroup {
+	text-align: center;
+	color: var(--text-color);
+}
+.about hgroup h2 {
+	font-size: 2.3rem;
+}
+.about hgroup h4 {
+	font-size: 1.5rem;
+	margin: 30px 0;
+}
+.about .wrapper {
+	display: flex;
+	justify-content: space-between;
+}
+.card {
+	flex: 0 0 28%;
+	border: 1px solid var(--text-color);
+	padding: 20px 30px;
+	text-align: center;
+}
+.card i {
+	font-size: 2rem;
+	background-color: var(--primary);
+	color: var(--white);
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
+	text-align: center;
+	border-radius: 50%;
+	border: 5px solid var(--white);
+	box-shadow: 0 0 1px black;
+}
+.card .text {
+	margin: 20px 0;
+}
+.card .text h3 {
+	font-size: 1.5rem;
+}
+.card .text p {
+	line-height: 1.5;
+	margin-top: 20px;
+	letter-spacing: 1.5px;
 }
