--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -205,3 +205,32 @@ SLIDER
 	line-height: 1.5;
 	font-size: 1.2rem;
 }
+/****************
+THREE
+****************/
+.three {
+	display: flex;
+	justify-content: space-between;
+}
+.three article {
+	flex: 0 0 70%;
+	padding: 50px 50px 50px 0;
+}
+.three article h2 {
+	font-size: 2.2rem;
+}
+.three article img {
+	width: 100%;
+	display: block;
+	border-radius: 10px;
+	margin: 25px 0;
+}
+.three article p {
+	font-size: 1.1rem;
+	letter-spacing: 1.5px;
+	line-height: 1.8;
+}
+.three aside {
+	flex: 0 0 25%;
+	border: 1px solid black;
+}
