--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -249,3 +249,18 @@ aside i:hover {
 	color: var(--text-color);
 	transform: rotate(360deg) scale(1.1);
 }
+/****************
+FOOTER
+****************/
+footer {
+	background-color: var(--secondary);
+	padding: 50px 0;
+	text-align: center;
+	color: var(--white);
+}
+footer p span {
+	padding: 0 20px;
+	margin: 0 20px;
+	border-left: 1px solid var(--white);
+	border-right: 1px solid var(--white);
+}
