--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -2,8 +2,8 @@
 :root {
 	--font-family: "Roboto", sans-serif;
 	--font-size: 16px;
-	--primary: #629dd1;
-	--primary-hover: #98bcdb;
+	--primary: #629dd1; /*rgb(98, 157, 209)*/
+	--primary-hover: #98bcdb; /*rgb(152, 188, 219)*/
 	--light-gray: #f8f8f8;
 	--secondary: #192024;
 	--text-color: #666f77;
@@ -16,9 +16,13 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+html {
+	scroll-behavior: smooth;
+}
 body {
 	font-family: var(--font-family);
 	font-size: var(--font-size);
+	position: relative;
 }
 h1, h2, h3, h4, h5, h6, p, a {
 	font-weight: 300;
@@ -38,21 +42,25 @@ h1, h2 {
 	color: var(--white);
 	letter-spacing: 1.5px;
 	border-radius: 8px;
+	cursor: pointer;
 }
 .blue {
-	background-color: var(--primary);
+	background: linear-gradient(90deg, rgb(98, 157, 209),  rgb(98, 157, 209), rgb(98, 157, 209), rgb(200, 218, 235), rgb(98, 157, 209), rgb(98, 157, 209), rgb(98, 157, 209));
+	background-size: 400% 100%;
 	border: 2px solid var(--primary);
+	transition: var(--transition);
 }
 .blue:hover {
-	background-color: var(--primary-hover);
-	border-color: var(--primary-hover);
+	background-position: 100% 0;
 }
 .transparent {
-	background-color: transparent;
+	background: linear-gradient(90deg, rgba(255, 255, 255, 0),rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+	background-size: 400% 100%;
+	transition: var(--transition);
 	border: 2px solid var(--white);
 }
 .transparent:hover {
-	background-color: rgba(255,255,255,.5);
+	background-position: 100% 0;
 }
 ul {
 	list-style: none;
@@ -68,8 +76,11 @@ section {
 NAVIGACIJA
 ****************/
 nav {
+	position: sticky;
 	background-color: var(--white);
 	padding: 10px 0;
+	top: 0;
+	box-shadow: 0 0 5px rgba(0,0,0,.65);
 }
 nav .container {
 	display: flex;
@@ -96,6 +107,16 @@ nav ul li:hover a {
 }
 nav .container .logo {
 	font-size: 1.5rem;
+}
+.onTop {
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	font-size: 1rem;
+	padding: 15px 10px;
+	background-color: var(--primary);
+	color: var(--white);
+	border-radius: 10px;
 }
 /****************
 HEADER
@@ -150,6 +171,9 @@ ABOUT
 	border: 1px solid var(--text-color);
 	padding: 20px 30px;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .card i {
 	font-size: 2rem;
@@ -157,7 +181,9 @@ ABOUT
 	color: var(--white);
 	width: 100px;
 	height: 100px;
-	line-height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	text-align: center;
 	border-radius: 50%;
 	border: 5px solid var(--white);
@@ -193,8 +219,19 @@ SLIDER
 	letter-spacing: 1.5px;
 	margin-top: 20px;
 }
+.slider .item {
+	display: flex;
+}
+.slide-card {
+	flex: 0 0 60%;
+}
+.slide-card img{
+	width: 100%;
+	display: block;
+}
 .slide-text {
 	margin-top: 25px;
+	flex: 0 0 40%;
 }
 .slide-text h4 {
 	font-size: 1.8rem;
@@ -241,13 +278,35 @@ THREE
 aside h3 {
 	font-size: 2.4rem;
 }
+.card-social {
+	position: relative;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+aside hr {
+	border: 1px solid var(--primary);
+}
+.card-text {
+	position: absolute;
+	bottom: 0;
+	color: var(--white);
+	background-color: var(--primary);
+	width: 100%;
+	height: 0;
+	line-height: 35px;
+}
 aside i {
 	font-size: 3rem;
 	transition: var(--transition);
 }
-aside i:hover {
+aside .card-social:hover i {
 	color: var(--text-color);
 	transform: rotate(360deg) scale(1.1);
+}
+aside .card-social:hover .card-text {
+	height: 35px;
 }
 /****************
 FOOTER
