--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -81,6 +81,7 @@ nav {
 	padding: 10px 0;
 	top: 0;
 	box-shadow: 0 0 5px rgba(0,0,0,.65);
+	z-index: 10;
 }
 nav .container {
 	display: flex;
@@ -117,6 +118,7 @@ nav .container .logo {
 	background-color: var(--primary);
 	color: var(--white);
 	border-radius: 10px;
+	display: none;
 }
 /****************
 HEADER
