--- a/JAVASCRIPT/miniProjekat/style.css
+++ b/JAVASCRIPT/miniProjekat/style.css
@@ -6,6 +6,8 @@
     --white: #fff;
     --black: #000;
     --fontFamily: 'Source Sans Pro', sans-serif;
+    --textShadow: 0 0 2px var(--black);
+    --transition: .3s ease;
 }
 /***************
 basics 
@@ -19,6 +21,10 @@ body {
     font-size: var(--fontSize);
     font-family: var(--fontFamily);
     line-height: 1.5;
+}
+.container {
+    max-width: 1140px;
+    margin: auto;
 }
 /***************
 header
@@ -53,5 +59,71 @@ footer {
 footer p {
     font-size: 1.3rem;
     color: var(--white);
-    text-shadow: 0 0 2px var(--black);
+    text-shadow: var(--textShadow);
+}
+/***************
+tabovi
+***************/
+.tabovi {
+    padding: 100px 0;
+}
+.linkovi {
+    text-align: center;
+}
+.linkovi a {
+    color: var(--primary);
+    font-size: 2rem;
+    margin: 0 10px;
+    border-bottom: 2px solid var(--primary);
+    text-decoration: none;
+    width: 300px;
+    display: inline-block;
+    transition: var(--transition);
+}
+.linkovi a:hover {
+    color: var(--accents);
+    text-shadow: var(--textShadow);
+    border-bottom: 2px solid var(--accents);
+}
+.prikazi {
+    display: flex;
+    justify-content: space-between;
+}
+.prikazi .col-2 {
+    flex: 0 0 68%;
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+}
+.prikazi .col-1 {
+    flex: 0 0 28%;
+    margin-top: 50px;   
+}
+.prikazi .col-1 img {
+    width: 100%;
+}
+.prikazi h2 {
+    font-size: 3rem;
+    color: var(--primary);
+}
+.prikazi hr {
+    margin: 20px 0 30px 0;
+    height: 2px;
+    border: none;
+    background: linear-gradient(to left, var(--primary),var(--accents));
+}
+.prikazi button {
+    padding: 15px 40px;
+    background: linear-gradient(45deg, var(--primary),var(--accents));
+    border: none;
+    font-size: 1rem;
+    color: var(--white);
+    text-transform: uppercase;
+    margin-top: 30px;
+    text-shadow: var(--textShadow);
+    cursor: pointer;
+    transition: var(--transition);
+}
+.prikazi button:hover {
+    background: linear-gradient(245deg, var(--primary),var(--accents));
 }
