--- a/ion_radionica/style.css
+++ b/ion_radionica/style.css
@@ -352,11 +352,20 @@ SIGN UP
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 50%;
+	width: 50px;
 	background-color: rgba(228, 52, 228, .37);
 	margin: 30px auto;
 	padding: 30px;
 	border-radius: 50px;
+	transform: translateX(-250%);
+	overflow: hidden;
+	transition: .8s all ease;	
+}
+.form-slideIn {
+	transform: translateX(0%) !important;
+}
+.form-open {
+	width: 600px !important;	
 }
 .sign-up form h3 {
 	font-size: 2rem;
@@ -365,7 +374,15 @@ SIGN UP
 }
 .sign-up form label {
 	position: relative;
-	margin-bottom: 30px;
+	margin: 0 auto 30px;
+	width: 80%;
+}
+.sign-up form h3, .sign-up form label, .sign-up form button {
+	opacity: 0;
+	transition: .5s opacity ease-in-out;
+}
+.opacity {
+	opacity: 1 !important;
 }
 .sign-up form label i {
 	color: black;
@@ -378,6 +395,7 @@ SIGN UP
 .sign-up form label input {
 	padding: 8px 0px 8px 40px;
 	font-size: 1rem;
+	width: 100%;
 }
 .sign-up form label input::placeholder {
 	font-size: 1rem;
